Wed Jul 10 11:06:46 CEST 2013
perl-IO-Multiplex-1.13-i486-1_microlinux.txz: Added.
perl-digest-sha1-2.13-i486-1_microlinux.txz: Added.
perl-digest-hmac-1.03-i486-1_microlinux.txz: Added.
perl-net-ip-1.26-i486-1_microlinux.txz: Added.
perl-net-dns-0.72-i486-1_microlinux.txz: Added.
perl-Net-Server-2.007-i486-1_microlinux.txz: Added.
perl-BerkeleyDB-0.52-i486-1_microlinux.txz: Added.
+---------------------------+
Tue Jul  9 09:58:00 CEST 2013
pwgen-2.06-i486-1_microlinux.txz: Added.
+---------------------------+
Tue Jul  2 08:04:20 CEST 2013
Merged the patches/ directory into the main slackware/ package directory.
+---------------------------+
Thu Jun 27 13:51:26 CEST 2013
icecast-2.3.2-i486-3_microlinux.txz: Rebuilt.
  Fixed path to icecast.xml in /etc/rc.d/rc.icecast.
libsigc++-2.2.10-i486-1_microlinux.txz: Added.
libtorrent-0.13.0-i486-1_microlinux.txz: Added.
rtorrent-0.9.0-i486-2_microlinux.txz: Added.
squid-3.1.20-i486-1_microlinux.txz: Added.
squidGuard-1.4-i486-1_microlinux.txz: Added.
postfix-2.9.7-i486-1_microlinux.txz: Added.
dovecot-2.1.17-i486-1_microlinux.txz: Added.
+---------------------------+
Tue Jun 25 17:06:06 CEST 2013
icecast-2.3.2-i486-2_microlinux.txz: Rebuilt.
  Fixed rc.icecast.new configuration in doinst.sh.
+---------------------------+
Thu Jun 20 16:12:52 CEST 2013
icecast-2.3.2-i486-1_microlinux.txz: Added.
libmpdclient-2.7-i486-1_microlinux.txz: Added.
ncmpc-0.16-i486-1_microlinux.txz: Added.
+---------------------------+
Thu Jun 20 15:20:25 CEST 2013
ffmpeg-0.11.1-i486-2_microlinux.txz: Rebuilt. 
  Fixed inconsistent $ARCH field in the package name, which made the package
	fly under slackpkg's radar ;o)
+---------------------------+
Tue Jun 18 08:20:48 CEST 2013
hplip-3.12.11-i486-1_microlinux.txz: Upgraded.
  Fix for broken 'hp-toolbox' utility.
+---------------------------+
Sun Jun 16 13:22:19 CEST 2013
Work in progress.

user-settings-console-1.0-noarch-2_microlinux.txz: Added.
sbopkg-0.36.0-noarch-1_microlinux.txz: Added.