@@ -1,0 +1,141 @@
+#!/bin/sh
+
+# Slackware build script for postgrey
+
+# Copyright 2013 Christopher Walker Copperas Cove, TX
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=postgrey
+VERSION=${VERSION:-1.34}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+# Automatically determine the architecture we're building on:
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+    # Unless $ARCH is already set, use uname -m for all other archs:
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+# Need to run postgrey as anything other than root.  Use nobody account by
+# default.  Change this to whatever user you want.
+POSTGREYUSR=${POSTGREYUSR:-nobody}
+POSTGREYGRP=${POSTGREYGRP:-nogroup}
+POSTGREYUID=${POSTGREYUID:-98}
+POSTGREYGID=${POSTGREYGID:-99}
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+do_exit() {
+  echo ; echo "You must have the ${POSTGREYUSR} user and ${POSTGREYGRP} group 
+in"
+  echo "order to build postgrey.  Sample lines to do so are below:"
+  echo "# groupadd -g ${POSTGREYGID} ${POSTGREYGRP}"
+  echo "# useradd -u ${POSTGREYUID} -d /var/lib/postgrey -s /bin/false -g ${POSTGREYGRP} ${POSTGREYUSR}"
+  echo "Exiting..." ; echo ; exit 1
+}
+
+# Check for milter-greylist user and group availability
+if ! getent group | grep -q ^${POSTGREYGRP}: 2>/dev/null ; then
+  do_exit;
+elif ! getent passwd | grep -q ^${POSTGREYUSR}: 2>/dev/null ; then
+  do_exit;
+fi
+
+set -e
+
+if [ ! -r $PRGNAM-$VERSION.tar.gz ] ; then
+   wget -c http://postgrey.schweikert.ch/pub/$PRGNAM-$VERSION.tar.gz
+fi
+
+md5sum -c $PRGNAM-$VERSION.tar.gz.md5
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf $PRGNAM-$VERSION
+tar xvf $CWD/$PRGNAM-$VERSION.tar.gz
+cd $PRGNAM-$VERSION
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+mkdir -p $PKG/usr/bin
+cp -a \
+   policy-test postgrey contrib/postgreyreport \
+   $PKG/usr/bin
+
+mkdir -p $PKG/etc/rc.d
+sed -e s/%%POSTGREYUSR%%/$POSTGREYUSR/g \
+    -e s/%%POSTGREYGRP%%/$POSTGREYGRP/g \
+    $CWD/rc.postgrey > $PKG/etc/rc.d/rc.postgrey.new
+
+mkdir -p $PKG/var/{lib,run}/postgrey
+chown $POSTGREYUSR.$POSTGREYGRP $PKG/var/lib/postgrey $PKG/var/run/postgrey
+
+mkdir -p $PKG/etc/postfix
+cp -a \
+   postgrey_whitelist_clients \
+   $PKG/etc/postfix/postgrey_whitelist_clients.new
+cp -a \
+   postgrey_whitelist_recipients \
+   $PKG/etc/postfix/postgrey_whitelist_recipients.new
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a \
+  COPYING Changes README README.exim \
+  $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM-$VERSION $PKG
